--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,14 @@
   <title>Almond Climate Comparison</title>
 </head>
 <body>
-  
+  <h1>Almond Climate Comparison</h1>
+  <p>
+    The purpose of this website is to provide climate data from <a href="https://darksky.net">Dark Sky</a> comparing the climates of almond-producing regions in Califorina and Southern Africa. California is the largest producer of almonds in the world, and the climate is ideal (<a href="http://www.almonds.com/sites/default/files/content/Technical%20%20Information%20Kit.pdf">source</a>). I have wondered for some time if almonds could be grown in Southern Africa, so I wanted to collect climate data to compare the two regions that could be analyzed to determine the suitability of Southern Africa's climate for almond growing.
+  </p>
+  <p>
+    The data is a dump file from a MySQL database, and this file can be used to reproduce the database. Directions are <a href="https://dev.mysql.com/doc/refman/8.0/en/reloading-sql-format-dumps.html">here</a>. The dump file will create a new database on the user's computer when reloaded.
+  </p>
+  <button>Download Data</button>
+  <a href="https://darksky.net">Powered by Dark Sky</a>
 </body>
 </html>
